Fix alignements

--- a/views/css/controllers/module/module.css
+++ b/views/css/controllers/module/module.css
@@ -43,7 +43,6 @@
 	height: 32px;
 	font-size: .625rem;
 	padding: .5rem;
-	width: 92%;
 	float: none;
 	margin: 0 auto;
 	color: #25b9d7;
